2002-09-09  Markus Germeier  <mager@tzi.de>

	* libmpio/io.c (fatentry2hw): added function
	(mpio_io_block_read, mpio_io_block_delete): 
	  use fatentry2hw

2002-09-09  Markus Germeier  <mager@tzi.de>

	* libmpio/mpio.c (mpio_memory_format): 
	  updated code to format external SmartMedia cards
	* libmpio/fat.c (mpio_fatentry_plus_plus, mpio_bootblocks_read): 
	  fixed max_cluster issues
	
2002-09-09  Markus Germeier  <mager@tzi.de>

	* libmpio/io.c (cluster2block): 
	  fixed cluster to block mapping for 32MB SmartMedia cards
	* libmpio/io.c (mpio_io_block_read, mpio_io_sector_read): 
	  added debug output in case of ECC error
	* libmpio/mpio.c (mpio_memory_free): 
	  fixed segmentation violation if no SM card is inserted
	* libmpio/mpio.c (mpio_get_info): 
	  *really* fixed the problem if no SM card is inserted
	
2002-09-09  Markus Germeier  <mager@tzi.de>

	* mpio_tool/mpiosh.c: 
	  (mpiosh_cmd_mput):
	  (mpiosh_cmd_mget):
		  make info texts consistent with get and put
	* libmpio/mpio.c (mpio_init_internal): 
	  fixed max_clusters for internal memory with more
	  then one chip
	* libmpio/fat.c (mpio_fatentry_hw2entry): added function
	* libmpio/fat.c (mpio_fatentry_entry2hw): added function
	* libmpio/fat.c: 
	  fixed support for MPIOs with more than one internal chip
	  (hopefully, someone please test this)

2002-09-08  Markus Germeier  <mager@tzi.de>

	* mpio_tool/mpiosh.c: 
	  (mpiosh_cmd_mput): fixed regex handling
	  (mpiosh_cmd_mget): fixed regex handling
	* regex for mput/mget does now work but uses "hard"
	  regular expressions instead of shell-like regex, e.g.:
	    "^0.*\.mp3$" ("hard" regular expression) 
	    "0*.mp3"     (shell-like)

2002-09-04  Andreas Buesching  <crunchy@tzi.de>

	* mpio_tool/mpiosh.c (mpiosh_cmd_mput): 
	added command mput. The arguments can be extended regular
	expressions. UNTESTED!
	(mpiosh_cmd_ldir): removed compiler warnings
	(mpiosh_cmd_mget): added command mget. The arguments can be
	extended regular expressions. UNTESTED!